header and hat images

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
     <title>Jeyakar Viaz</title>
   </head>
   <body>
-    <header>logo comes here</header>
-    <div id="root"></div>
+    
+    <!-- <div id="root"></div> -->
+    <header>
+      <div id="logo"><img src="src/assets/JD-logo.svg" /></div>
+      <nav>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Skill set</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Design process</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="carousal">
+      carousal
+    </section>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
